--- a/output.css
+++ b/output.css
@@ -10,6 +10,7 @@
     --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-amber-300: oklch(87.9% 0.169 91.605);
+    --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-green-400: oklch(79.2% 0.209 151.711);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-600: oklch(44.6% 0.03 256.802);
@@ -52,6 +53,7 @@
     --tracking-tighter: -0.05em;
     --tracking-wide: 0.025em;
     --leading-tight: 1.25;
+    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
@@ -228,6 +230,9 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
+  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -291,8 +296,14 @@
   .h-\[60px\] {
     height: 60px;
   }
+  .h-\[65px\] {
+    height: 65px;
+  }
   .h-\[140px\] {
     height: 140px;
+  }
+  .h-\[150px\] {
+    height: 150px;
   }
   .h-\[190px\] {
     height: 190px;
@@ -309,8 +320,26 @@
   .h-\[455px\] {
     height: 455px;
   }
+  .h-\[465px\] {
+    height: 465px;
+  }
+  .h-\[490px\] {
+    height: 490px;
+  }
   .h-\[645px\] {
     height: 645px;
+  }
+  .h-\[650px\] {
+    height: 650px;
+  }
+  .h-\[655px\] {
+    height: 655px;
+  }
+  .h-\[680px\] {
+    height: 680px;
+  }
+  .h-\[1500px\] {
+    height: 1500px;
   }
   .h-full {
     height: 100%;
@@ -329,6 +358,9 @@
   }
   .w-\[150px\] {
     width: 150px;
+  }
+  .w-\[180px\] {
+    width: 180px;
   }
   .w-\[223px\] {
     width: 223px;
@@ -420,6 +452,9 @@
   .gap-12 {
     gap: calc(var(--spacing) * 12);
   }
+  .gap-15 {
+    gap: calc(var(--spacing) * 15);
+  }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
   }
@@ -490,6 +525,9 @@
   .rounded-md {
     border-radius: var(--radius-md);
   }
+  .rounded-sm {
+    border-radius: var(--radius-sm);
+  }
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
@@ -549,6 +587,9 @@
   .bg-amber-200 {
     background-color: var(--color-amber-200);
   }
+  .bg-amber-500 {
+    background-color: var(--color-amber-500);
+  }
   .bg-black {
     background-color: var(--color-black);
   }
@@ -578,6 +619,15 @@
   }
   .stroke-2 {
     stroke-width: 2;
+  }
+  .object-contain {
+    object-fit: contain;
+  }
+  .object-cover {
+    object-fit: cover;
+  }
+  .object-center {
+    object-position: center;
   }
   .p-1 {
     padding: calc(var(--spacing) * 1);
@@ -674,6 +724,10 @@
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
   .text-xs {
     font-size: var(--text-xs);
@@ -847,6 +901,10 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .duration-100 {
+    --tw-duration: 100ms;
+    transition-duration: 100ms;
+  }
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
@@ -858,6 +916,10 @@
   .duration-500 {
     --tw-duration: 500ms;
     transition-duration: 500ms;
+  }
+  .duration-1000 {
+    --tw-duration: 1000ms;
+    transition-duration: 1000ms;
   }
   .ease-\[cubic-bezier\(0\.25\,0\.1\,0\.25\,1\)\] {
     --tw-ease: cubic-bezier(0.25,0.1,0.25,1);
@@ -940,6 +1002,13 @@
     &:hover {
       @media (hover: hover) {
         border-color: var(--color-white);
+      }
+    }
+  }
+  .hover\:bg-\[\#18F29B\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #18F29B;
       }
     }
   }
@@ -1054,6 +1123,11 @@
       margin-top: calc(var(--spacing) * 4);
     }
   }
+  .md\:flex {
+    @media (width >= 48rem) {
+      display: flex;
+    }
+  }
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1062,6 +1136,11 @@
   .md\:flex-col {
     @media (width >= 48rem) {
       flex-direction: column;
+    }
+  }
+  .md\:flex-row {
+    @media (width >= 48rem) {
+      flex-direction: row;
     }
   }
   .md\:text-5xl {
@@ -1214,6 +1293,11 @@
   .lg\:text-\[0\.9em\] {
     @media (width >= 64rem) {
       font-size: 0.9em;
+    }
+  }
+  .lg\:text-\[1\.2em\] {
+    @media (width >= 64rem) {
+      font-size: 1.2em;
     }
   }
   .lg\:text-\[1\.3em\] {
