--- a/output.css
+++ b/output.css
@@ -39,6 +39,7 @@
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
+    --tracking-tight: -0.025em;
     --tracking-wide: 0.025em;
     --radius-md: 0.375rem;
     --radius-xl: 0.75rem;
@@ -51,6 +52,7 @@
     --default-mono-font-family: var(--font-mono);
     --font-MonserratExtraBold: 'MonserratExtraBold', sans-serif;
     --font-MonserratRegular: 'MonserratRegular', sans-serif;
+    --font-MonserratThin: 'MonserratThin', sans-serif;
     --font-MonserratLight: 'MonserratLight', sans-serif;
     --font-CalSans: 'CalSans', sans-serif;
     --font-Boldonse: 'Boldonse', sans-serif;
@@ -545,6 +547,9 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
+  .py-22 {
+    padding-block: calc(var(--spacing) * 22);
+  }
   .text-center {
     text-align: center;
   }
@@ -571,6 +576,9 @@
   }
   .font-MonserratRegular {
     font-family: var(--font-MonserratRegular);
+  }
+  .font-MonserratThin {
+    font-family: var(--font-MonserratThin);
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -637,6 +645,10 @@
     --tw-tracking: 2px;
     letter-spacing: 2px;
   }
+  .tracking-tight {
+    --tw-tracking: var(--tracking-tight);
+    letter-spacing: var(--tracking-tight);
+  }
   .tracking-wide {
     --tw-tracking: var(--tracking-wide);
     letter-spacing: var(--tracking-wide);
@@ -649,6 +661,12 @@
   }
   .text-black {
     color: var(--color-black);
+  }
+  .text-black\/50 {
+    color: color-mix(in srgb, #000 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-black) 50%, transparent);
+    }
   }
   .text-black\/60 {
     color: color-mix(in srgb, #000 60%, transparent);
@@ -773,6 +791,13 @@
       }
     }
   }
+  .hover\:font-MonserratExtraBold {
+    &:hover {
+      @media (hover: hover) {
+        font-family: var(--font-MonserratExtraBold);
+      }
+    }
+  }
   .hover\:text-black {
     &:hover {
       @media (hover: hover) {
@@ -887,6 +912,11 @@
   .lg\:w-\[850px\] {
     @media (width >= 64rem) {
       width: 850px;
+    }
+  }
+  .lg\:w-\[1000px\] {
+    @media (width >= 64rem) {
+      width: 1000px;
     }
   }
   .lg\:w-\[1084px\] {
