--- a/output.css
+++ b/output.css
@@ -7,8 +7,9 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-400: oklch(82.8% 0.189 84.429);
+    --color-amber-800: oklch(47.3% 0.137 46.201);
     --color-green-400: oklch(79.2% 0.209 151.711);
-    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-black: #000;
@@ -288,17 +289,8 @@
   .h-\[190px\] {
     height: 190px;
   }
-  .h-\[200px\] {
-    height: 200px;
-  }
-  .h-\[220px\] {
-    height: 220px;
-  }
   .h-\[231px\] {
     height: 231px;
-  }
-  .h-\[250px\] {
-    height: 250px;
   }
   .h-\[300px\] {
     height: 300px;
@@ -350,6 +342,9 @@
   }
   .max-w-7xl {
     max-width: var(--container-7xl);
+  }
+  .min-w-full {
+    min-width: 100%;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -510,6 +505,12 @@
   }
   .bg-\[\#c9ffea\] {
     background-color: #c9ffea;
+  }
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
+  }
+  .bg-amber-800 {
+    background-color: var(--color-amber-800);
   }
   .bg-black {
     background-color: var(--color-black);
@@ -680,6 +681,12 @@
   .text-\[\#A6FC1B\] {
     color: #A6FC1B;
   }
+  .text-\[0\.8\] {
+    color: 0.8;
+  }
+  .text-\[sm\] {
+    color: sm;
+  }
   .text-black {
     color: var(--color-black);
   }
@@ -828,6 +835,12 @@
     @media (width >= 40rem) {
       font-size: var(--text-4xl);
       line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .sm\:text-5xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
     }
   }
   .sm\:text-sm {
@@ -1004,6 +1017,21 @@
   .lg\:text-\[1\.3em\] {
     @media (width >= 64rem) {
       font-size: 1.3em;
+    }
+  }
+  .lg\:text-\[1em\] {
+    @media (width >= 64rem) {
+      font-size: 1em;
+    }
+  }
+  .lg\:text-\[1\] {
+    @media (width >= 64rem) {
+      color: 1;
+    }
+  }
+  .lg\:text-\[md\] {
+    @media (width >= 64rem) {
+      color: md;
     }
   }
   .md\:lg\:px-32 {
